--- a/test-index.html
+++ b/test-index.html
@@ -112,33 +112,12 @@
 </script>
   
 <script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+  
+import { createClient } from '@supabase/supabase-js'
 
-  const supabase = createClient('https://ekxhqzvhuvymrwsmhlqp.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVreGhxenZodXZ5bXJ3c21obHFwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwNTQ3NjcsImV4cCI6MjA3MzYzMDc2N30.xtZCb5qtl9bGSPOreTVtTSdB_8sEYdGZOYnwrpX91M0')
-
-  async function routeSticker() {
-  const serial = document.getElementById("serialInput").value.trim()
-  console.log("Searching for:", serial)
-
-  const { data, error } = await supabase
-    .from('dispatch_ledger')
-    .select('landing_page')
-    .eq('serial_number', serial)
-    .single()
-
-  console.log("Returned data:", data)
-  console.log("Returned error:", error)
-
-  if (data && data.landing_page) {
-    console.log("Redirecting to:", data.landing_page)
-    window.location.href = data.landing_page
-  } else {
-    console.log("Sticker not found")
-  }
-}
-
-  // ✅ This must be outside the function
-  window.routeSticker = routeSticker
+const supabaseUrl = 'https://ekxhqzvhuvymrwsmhlqp.supabase.co'
+const supabaseKey = process.env.SUPABASE_KEY
+const supabase = createClient(supabaseUrl, supabaseKey)
 </script>
   
 </body>
