--- a/test-index.html
+++ b/test-index.html
@@ -8,15 +8,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- Section 0: Dispatch -->
-  <section id="dispatch" class="parallax">
-  <div class="content">
-    <h1>Have You Received a Dispatch?</h1>
-    <p>Type the serial number from the back of the sticker to learn more.</p>
-    <input type="text" id="serialInput" placeholder="Enter your sticker serial number">
-<button class="dispatch-button" onclick="routeSticker()">Track Dispatch</button>
-  </div>
+ <section id="test-zone">
+  <input type="text" id="serialInput" placeholder="Enter serial">
+  <button onclick="routeSticker()">Test Dispatch</button>
 </section>
+  
   <!-- Section 1: Mission Directive -->
   <section class="parallax" id="mission">
     <div class="content">
