--- a/test-index.html
+++ b/test-index.html
@@ -107,13 +107,32 @@
 })();
 </script>
   
-<script type="module">
-  
-import { createClient } from '@supabase/supabase-js'
+<section id="test-zone" style="padding:24px;border:1px dashed #999;margin:24px;">
+  <input type="text" id="serialInput" placeholder="Enter serial">
+  <button id="dispatchBtn">Test Dispatch</button>
+</section>
 
-const supabaseUrl = 'https://ekxhqzvhuvymrwsmhlqp.supabase.co'
-const supabaseKey = process.env.SUPABASE_KEY
-const supabase = createClient(supabaseUrl, supabaseKey)
+<script>
+  // Boot log
+  console.log("Boot: plain script loaded");
+
+  // Wire the button without inline onclick
+  document.addEventListener("DOMContentLoaded", () => {
+    console.log("Boot: DOMContentLoaded");
+    const btn = document.getElementById("dispatchBtn");
+    const input = document.getElementById("serialInput");
+
+    if (!btn || !input) {
+      console.error("Wiring error: elements not found");
+      return;
+    }
+
+    btn.addEventListener("click", () => {
+      const val = input.value.trim();
+      console.log("CLICK fired. Input:", val, "Length:", val.length);
+      alert("Button click detected. Value: " + val);
+    });
+  });
 </script>
   
 </body>
