--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- <!-- Section 0: Dispatch -->
   <section id="dispatch" class="parallax">
   <div class="content">
     <h1>Have You Received a Dispatch?</h1>
     <p>Type the serial number from the back of the sticker to learn more.</p>
     <input type="text" id="serialInput" placeholder="Enter your sticker serial number">
-<button class="dispatch-button" onclick="routeSticker()">Track Dispatch</button>
+    <button onclick="checkSerial()">Search</button>
+    <div id="searchResult"></div>
   </div>
 </section>
   <!-- Section 1: Mission Directive -->
@@ -120,6 +120,7 @@ function checkSerial() {
   if (serial >= 9000 && serial <= 9150) {
     window.location.href = "mesa-county.html";
   } else if (serial >= 9151 && serial <= 9301) {
+    window.location.href = "next-region.html"; // placeholder for future batch
     window.location.href = "san-juan.html"; // placeholder for future batch
   } else {
     result = `<p>This sticker hasn't been dispatched yet. Double-check your serial number and try again...</p>`;
