--- a/index.html
+++ b/index.html
@@ -75,10 +75,15 @@
   
 <!-- Section 6: Dispatch Philosophy -->
   <section class="parallax" id="grace">
-    <div class="content">
-      <h1>My Return to Grace</h1>
-      <p>There comes a point in all of our lives when we realize we've crossed the precipice of selfish indulgence, prompting us to re-evaluate our legacy and what values we truly must grasp with far more vigor. This future blog is my journey back to grace, finding God (who's never left my side, despite it all) amidst the storm of schizophrenia, and coming back to more than just an emotional baseline, but home itself.</p>
-    </div>
+   <div class="content">
+  <h1>My Return to Grace</h1>
+  <p>
+    <a href="https://jah-dispatch.github.io/happenstance/index.html">Visit the Happenstance Blog</a>
+  </p>
+  <p>
+    There comes a point in all of our lives when we realize we've crossed the precipice of selfish indulgence, prompting us to re-evaluate our legacy and what values we truly must grasp with far more vigor. This future blog is my journey back to grace, finding God (who's never left my side, despite it all) amidst the storm of schizophrenia, and coming back to more than just an emotional baseline, but home itself.
+  </p>
+</div>
   </section>
   
   <!-- Section 7: Just a Human -->
