--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <!-- Section 3: Glimpses of Emerald City -->
   <section class="parallax" id="glimpses">
     <div class="content">
-      <h1>The Emerald City, OZ</h1>
-      <h2>Zip Code: 71025</h2>
-      <p>The Emerald City isn’t merely a place. It’s a state of being where peace thrives and malevolence dissolves. It’s mythic, yes. Misty, and sovereign all the way. These visuals are my interpretation of what emotional safety looks like—layered in green, wrapped in fog, and free of judgment.</p>
+      <h2>117 Poppy Field Way</h2>
+      <h2>The Emerald City, OZ 71025</h2>
+      <p>This isn’t an ordinary place. It’s a state of being where peace thrives and malevolence dissolves. It’s mythic, yes. Misty, and sovereign all the way. These visuals are my interpretation of what emotional safety looks like—layered in green, wrapped in fog, and free of judgment.</p>
     </div>
   </section>
 
