--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <h1>Mission Directive</h1>
       <p>This project exists to prove that kindness doesn’t need a spotlight. It’s a dispatch ministry built on emotional resonance, not recognition. Every sticker, every scroll, every whisper of encouragement is sent without expectation—just the belief that someone, somewhere, needed it.</p>
     </div>
+    <br>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/app1HSXmLPruYIBOa/pagaahJxcrFK7zm0Y/form" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
   </section>
 
 
