--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
       <p>This project exists to prove that kindness doesn’t need a spotlight. It’s a dispatch ministry built on emotional resonance, not recognition. Every sticker, every scroll, every whisper of encouragement is sent without expectation—just the belief that someone, somewhere, needed it.</p>
     </div>
    </section>
-
+ <!-- Section 1.5: Dispatch Sticker Tracker -->
+  <section class="parallax" id="tracker">
+    <div class="content">
+      <h1>Share Your Sticker Story Here</h1>
+<iframe class="airtable-embed" src="https://airtable.com/embed/app1HSXmLPruYIBOa/pagaahJxcrFK7zm0Y/form" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    </div>
+   </section>
 
   <!-- Section 2: The Wizard -->
   <section class="parallax" id="wizard">
