--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <!-- Section 1.5: Dispatch Sticker Tracker -->
   <section class="parallax" id="tracker">
     <div class="content">
-      <h1>Share Your Sticker Story Here</h1>
+      <h1>Let's See Where Ya Stuck It!</h1>
 <iframe class="airtable-embed" src="https://airtable.com/embed/app1HSXmLPruYIBOa/pagaahJxcrFK7zm0Y/form" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
     </div>
    </section>
