--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ function checkSerial() {
     window.location.href = "mesa-county.html";
   } else if (serial >= 9151 && serial <= 9301) {
     window.location.href = "midwest.html"; // placeholder for future batch
+  } else if (serial >= 9302 && serial <= 9452) {
     window.location.href = "san-juan.html"; // placeholder for future batch
   } else {
     result = `<p>This sticker hasn't been dispatched yet. Double-check your serial number and try again...</p>`;
