--- a/mesa-county.html
+++ b/mesa-county.html
@@ -12,7 +12,7 @@
     <!-- dispatch blocks, video embed, sticker lore -->
         <div class="content">
   <a href="index.html" class="back-button">← Return to Dispatch Search</a>
-  <h1>Mesa County Dispatches</h1>
+   <h1 style="text-align: center;">Mesa County Dispatches</h1>
   <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in Mesa County, Colorado.</h2>
 
   <img src="assets/images/sticker1-thumb.png" alt="Mesa County Sticker" class="sticker-thumb">
@@ -52,7 +52,7 @@
         And I really do stand for the strange and lonely, because <i>I AM</i> the "strange and lonely," if you actually knew.
       </p>
       <br>
-      <h1>Sticker Radius</h1>
+      <h1 style="text-align: center;">Sticker Radius</h1>
       <div class="googlemap">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d794539.9118089558!2d-108.87955390978182!3d38.93148455642981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87462e01b88beebf%3A0xedd7334784655d34!2sMesa%20County%2C%20CO!5e0!3m2!1sen!2sus!4v1757931074031!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
