--- a/midwest.html
+++ b/midwest.html
@@ -12,7 +12,7 @@
     <!-- dispatch blocks, video embed, sticker lore -->
         <div class="content">
       <a href="index.html" class="back-button">← Return to Dispatch Search</a>
-      <h1>Midwest United States Dispatches</h1>
+     <h1 style="text-align: center;">Midwestern States Dispatches</h1>
       <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in the Midwest.</h2>
           <img src="assets/images/sticker2-thumb.png" alt="Midwest USA Sticker" class="sticker-thumb">
       <p>
@@ -49,8 +49,11 @@
         never taken for granted, but always counted on for that much desired "pick me up."
       </p>
       <br>
-      <h1>Sticker Radius</h1>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8369828.152388804!2d-101.22367832924839!3d41.79590975572857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87e520aa8409fd11%3A0xd15c1439d69b877e!2sMidwestern%20United%20States!5e0!3m2!1sen!2sus!4v1758553357840!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+      <br>
+      <h1 style="text-align: center;">Sticker Radius</h1>
+      <div class="googlemap">
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8369828.152388804!2d-101.22367832924839!3d41.79590975572857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87e520aa8409fd11%3A0xd15c1439d69b877e!2sMidwestern%20United%20States!5e0!3m2!1sen!2sus!4v1758553357840!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
+    </div>
 
     <div class="comment-wrapper">
     <h3 class="comment-title">Leave a Dispatch Echo</h3>   
@@ -59,7 +62,6 @@
 <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
 <script>commentBox('5643809216004096-proj')</script>
 
-  </div>
 </section>
   
 </body>
