--- a/san-juan.html
+++ b/san-juan.html
@@ -12,7 +12,7 @@
     <!-- dispatch blocks, video embed, sticker lore -->
         <div class="content">
       <a href="index.html" class="back-button">← Return to Dispatch Search</a>
-      <h1>San Juan Area Dispatches</h1>
+      <h1 style="text-align: center;">San Juan Area Dispatches</h1>
       <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in the San Juan Area of Colorado.</h2>
           <img src="assets/images/sticker3-thumb.png" alt="San Juan, Colorado Sticker" class="sticker-thumb">
       <p>
@@ -46,9 +46,12 @@
         And the quiet strength of somebody who might be broken, yet flies above anyway.
       </p>
       <br>
-      <h1>Sticker Radius</h1>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d119757.88729068916!2d-107.89658961325111!3d37.93044642168386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1758044474853!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
-    
+      <h1 style="text-align: center;">Sticker Radius</h1>
+      <div class="googlemap">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d119757.88729068916!2d-107.89658961325111!3d37.93044642168386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1758044474853!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+       
 
     <div class="comment-wrapper">
     <h3 class="comment-title">Leave a Dispatch Echo</h3>   
@@ -57,7 +60,6 @@
 <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
 <script>commentBox('5675117312999424-proj')</script>
 
-  </div>
 </section>
   
 </body>
