--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section class="parallax" id="tracker">
     <div class="content">
       <h1>Let's See Where Ya Stuck It!</h1>
-      <p>Fill out this quick form, drop in a picture of the sticker on your car, laptop, your neighbor's telephone pole? If you give permission to publish, it'll get updated below in the "cartographic gallery" below.</p>
+      <p>Fill out this quick form, drop in a picture of the sticker on your car, laptop, your neighbor's telephone pole? If you give permission to publish, it'll get updated in the "cartographic gallery" below.</p>
       <br>
 <iframe class="airtable-embed" src="https://airtable.com/embed/appM7Mx2gyGmBcJMp/pagPoZJxAbaN0ceI0/form" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe> 
     </div>
